# TReq

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
src/app/: backend.rs  mod.rs  provider.rs  service_commands.rs  service_runner.rs
src/app/services/: mod.rs
src/services/: mod.rs  provider.rs  runner.rs
src/services/request/: commands.rs  entity.rs  facade.rs  mod.rs  runner.rs  service.rs
src/utils/: commands.rs  errors.rs  files.rs  mod.rs  observable.rs  regexes.rs  uuid.rs  validators.rs
src/view/: commands.rs  input_to_commands.rs  mod.rs  style.rs
src/view/cli/: clap_parser.rs  commands.rs  mod.rs  validators.rs  writer.rs
src/view/commands/: inspect_request.rs  remove_request.rs  rename_request.rs  save_new_request.rs  save_request_with_base_request.rs  show_list_all_request.rs  submit_request.rs  submit_saved_request.rs
src/view/input/: cli_definition.rs  cli_input.rs  mod.rs  tests_parser.rs  validators_input.rs
src/view/input_parsers/: main_command_choices.rs  mod.rs  request_data.rs  save_command_choices.rs
src/view/output/: mod.rs  utils.rs  writer.rs
tests/: Containerfile  compose.yml  mod.rs
tests/e2e/: basic.rs  mod.rs
tests/integration/: cli_commands.rs  mod.rs  network.rs
tests/mock_api/: Dockerfile  docker-compose.yml  start.sh
tests/mocks/api/: docker-compose.yml
tests/mocks/repositories/: mod.rs
tests/mocks_api/netcat/: response.http
tests/provider/: factory_provider.rs  mod.rs
tests/provider/e2e/: mod.rs
tests/provider/integration/: mod.rs
tests/provider/services/: request.rs  web.rs
tests/services/: mod.rs  request.rs  web.rs
tests/setup/: docker-compose.yml
tests/setup/mockoon/: mockoon_definition.json
tests/utils/: mod.rs
tests/view/: input_parser.rs  map_input_to_commands.rs  mod.rs
tests/view/snapshots/: r#mod__view__input_parser__should_ignore_body_inputs_in_GET_request.snap  r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-2.snap  r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-3.snap  r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-4.snap  r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-5.snap  r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-6.snap  r#mod__view__input_parser__should_parse_to_normal_GET_submit_without_passing_method_as_subcommand_and_no_body.snap  r#mod__view__input_parser__should_parse_to_normal_POST_submit_without_passing_method_as_subcommand_but_passing_some_body_data.snap  r#mod__view__input_parser__should_persist_snapshot_to_edit-2.snap  r#mod__view__input_parser__should_persist_snapshot_to_edit-2.snap.new  r#mod__view__input_parser__should_persist_snapshot_to_edit-3.snap  (+26 more)
(+60 files in other folders)
