[package]
name = "treq"
version = "1.0.0"
edition = "2021"
authors = [ "Talis-Fb" ]
license = "GPL-3.0"
description = "A Cli client to make HTTP requests for Hacker Users"
# homepage = "https://github.com/talis-fb/TReq"
# repository = "https://github.com/talis-fb/TReq"
# documentation = "https://github.com/talis-fb/TReq/wiki"
categories = ["command-line-interface"]
keywords = [
  "cli",
  "http",
  "client",
  "terminal",
  "restful"
]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"

serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.22"

uuid = { version = "1.5.0", features = ["v4","fast-rng"]}
anyhow = "1.0.75"
async-trait = "0.1.73"

mockall = "0.11.4" # TODO: Move it to dev-dependencies, but it breaks with web_client integration test. Importing Mock of HttpRepository
indicatif = "0.17.7"
regex = "1.10.2"
directories = "5.0.1"

[dev-dependencies]
