[package]
name = "treq"
version = "1.1.0"
edition = "2021"
authors = [ "Talis-Fb" ]
license = "GPL-3.0"
description = "A Cli client to make HTTP requests for Hacker Users"
homepage = "https://github.com/talis-fb/TReq"
repository = "https://github.com/talis-fb/TReq"
documentation = "https://github.com/talis-fb/TReq"
categories = ["command-line-interface"]
keywords = [
  "cli",
  "http",
  "client",
  "terminal",
  "restful"
]

[dependencies]
# Async
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"

# CLI
clap = { version = "4.4.7", features = ["derive", "cargo"] }
crossterm = "0.27.0"
indicatif = "0.17.7"

# HTTP / Web
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }


anyhow = "1.0.75"
thiserror = "1.0.56"
predicates = "3.1.0"
regex = "1.10.2"
directories = "5.0.1"
uuid = { version = "1.5.0", features = ["v4","fast-rng"]}
mockall = "0.11.4" # TODO: Move it to dev-dependencies, but it breaks with web_client integration test. Importing Mock of HttpRepository
tempfile = "3.9.0"

[dev-dependencies]
assert_cmd = "2.0.13"
insta = { version = "1.34.0", features = ["yaml"] }

[features]
run_e2e_tests = []
